fix: ui view for tests

--- a/ui/src/app/shared/table/data-table.html
+++ b/ui/src/app/shared/table/data-table.html
@@ -3,7 +3,7 @@
         <div class="ui wide column">
             <div class="ui fluid input">
                 <input type="text" placeholder="{{ 'filter' | translate }}" [(ngModel)]="filter"
-                    (keyup)="filterChange()">
+                    (keyup)="filterKeyUp()">
             </div>
         </div>
     </div>
