--- a/ui/src/app/shared/keys/form/keys.form.html
+++ b/ui/src/app/shared/keys/form/keys.form.html
@@ -1,9 +1,9 @@
 <div class="KeyForm">
     <div class="ui form">
-        <div class="ui info message" *ngIf="newKey.type == 'ssh'">
+        <div class="ui info message" *ngIf="newKey.type === 'ssh'">
             {{ 'keys_ssh_key_help' | translate }} <a href="#" [routerLink]="['/docs', 'docs', 'components', 'worker', 'key', 'install']">Worker Install Key</a>
         </div>
-        <div class="ui info message" *ngIf="newKey.type == 'pgp'">
+        <div class="ui info message" *ngIf="newKey.type === 'pgp'">
             {{ 'keys_pgp_key_help' | translate }} <a href="#" [routerLink]="['/docs', 'docs', 'components', 'worker', 'key', 'install']">Worker Install Key</a>
         </div>
         <div class="fields">
