--- a/ui/src/app/views/workflow/run/workflow.run.scss
+++ b/ui/src/app/views/workflow/run/workflow.run.scss
@@ -1,5 +1,4 @@
 @import '../../../../common';
-@import '../../../../../node_modules/spinkit/scss/spinners/11-folding-cube';
 
 .workflow-run {
     width: 100%;
@@ -21,15 +20,20 @@
 
         .loading {
             flex: 1;
-            text-align: center;
+            .col {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
 
-            .sk-folding-cube {
-                .sk-cube {
-                    border: 2px solid transparent;
+                .sk-fold {
+                    margin-bottom: 5px;
+                    .sk-fold-cube {
+                        border: 2px solid transparent;
 
-                    &:before {
-                        :host-context(.night) & {
-                            background-color: $darkTheme_blue;
+                        &:before {
+                            :host-context(.night) & {
+                                background-color: $darkTheme_blue;
+                            }
                         }
                     }
                 }
