--- a/ui/src/app/shared/permission/form/permission.form.html
+++ b/ui/src/app/shared/permission/form/permission.form.html
@@ -1,12 +1,23 @@
 <form class="ui form" *ngIf="ready" (ngSubmit)="create()">
     <div class="fields">
         <div class="seven wide field">
-            <label>{{'group_name' | translate}}</label>
-            <sm-select class="fluid search" [options]="{'fullTextSearch': true}"
-                [(model)]="newGroupPermission.group.name" id="PermissionGroupName">
+            <label>Group name <a class="group-help" suiPopup [popupTemplate]="popupHelp" popupTrigger="outsideClick"
+                    popupPlacement="bottom">My group is not listed</a></label>
+            <sm-select *ngIf="!manual" class="fluid search" [options]="{'fullTextSearch': true}"
+                (onChange)="selectGroup($event)">
                 <option *ngFor="let g of groupList" [value]="g.name">{{g.name}}{{g.organization ? ' (' +
                     g.organization + ')' : ''}}</option>
             </sm-select>
+            <input *ngIf="manual" type="text" name="group-name" [(ngModel)]="newGroupPermission.group.name">
+            <ng-template let-popup #popupHelp>
+                <div class="group-help-popup">
+                    <span>You'll see only your groups in this list.</span>
+                    <span>If you need to add read permission to another group you can manually enter its name.</span>
+                    <button type="button" class="ui icon blue button"
+                        (click)="switchManualInput($event);popup.close();">Switch text
+                        input</button>
+                </div>
+            </ng-template>
         </div>
         <div class="five wide field">
             <label>{{'group_permission' | translate}}</label>
