--- a/ui/src/app/shared/permission/form/permission.form.html
+++ b/ui/src/app/shared/permission/form/permission.form.html
@@ -14,7 +14,7 @@
                     <span>You'll see only your groups in this list.</span>
                     <span>If you need to add read permission to another group you can manually enter its name.</span>
                     <button type="button" class="ui icon blue button"
-                        (click)="switchManualInput($event);popup.close();">Switch text
+                        (click)="switchManualInput();popup.close();">Switch text
                         input</button>
                 </div>
             </ng-template>
