--- a/ui/src/app/shared/permission/form/permission.form.html
+++ b/ui/src/app/shared/permission/form/permission.form.html
@@ -3,11 +3,15 @@
         <div class="seven wide field">
             <label>Group name <a class="group-help" suiPopup [popupTemplate]="popupHelp" popupTrigger="outsideClick"
                     popupPlacement="bottom">My group is not listed</a></label>
-            <sm-select *ngIf="!manual" class="fluid search" [options]="{'fullTextSearch': true}"
-                (onChange)="selectGroup($event)">
-                <option *ngFor="let g of groupList" [value]="g.name">{{g.name}}{{g.organization ? ' (' +
-                    g.organization + ')' : ''}}</option>
-            </sm-select>
+            <sui-select *ngIf="!manual" class="fluid selection" (selectedOptionChange)="selectGroup($event)"
+                [options]="groupList" [isSearchable]="true" valueField="name" #nameSelect name="group-name"
+                [optionTemplate]="optionNameTemplate">
+                <sui-select-option *ngFor="let option of nameSelect.filteredOptions" [value]="option">
+                </sui-select-option>
+            </sui-select>
+            <ng-template let-option #optionNameTemplate>
+                {{option.name}}{{option.organization ? ' (' + option.organization + ')' : ''}}
+            </ng-template>
             <input *ngIf="manual" type="text" name="group-name" [(ngModel)]="newGroupPermission.group.name">
             <ng-template let-popup #popupHelp>
                 <div class="group-help-popup">
@@ -21,10 +25,14 @@
         </div>
         <div class="five wide field">
             <label>{{'group_permission' | translate}}</label>
-            <sm-select class="fluid search" [options]="{'fullTextSearch': true}"
-                [(model)]="newGroupPermission.permission" id="PermissionGroupLevel">
-                <option *ngFor="let p of permissionList" [value]="p.value">{{p.name | translate}}</option>
-            </sm-select>
+            <sui-select class="fluid selection" [(ngModel)]="newGroupPermission.permission" [options]="permissionList"
+                valueField="value" #levelSelect name="permission-level" [optionTemplate]="optionLevelTemplate">
+                <sui-select-option *ngFor="let option of levelSelect.filteredOptions" [value]="option">
+                </sui-select-option>
+            </sui-select>
+            <ng-template let-option #optionLevelTemplate>
+                {{option.name | translate}}
+            </ng-template>
         </div>
         <div class="two wide center field">
             <button *ngIf="buttonType === 'submit'" type="submit" class="ui green button" [class.loading]="loading"
